--- a/dashbord.html
+++ b/dashbord.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Include any additional CSS or meta tags -->
 </head>
 
 <body>
     <div class="header h1">
         <header>
-            <!-- Your dashboard header content here -->
             <h1>Welcome Back</h1>
         </header>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
