--- a/dashbord.html
+++ b/dashbord.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header h1">
         <header>
-            <h1>Welcome Back</h1>
+            <h1>Your order is confirmed and being processed. Thank you!</h1>
         </header>
     </div>
     <script src="script.js"></script>
